--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
       <div class="cols">
         <div>
           <h3>トップ画面（メモ一覧表示）</h3>
-          <p class="meta">ここにスクリーンショット画像を配置</p>
+          <p class="meta">wordcloudtest1.png</p>
+          <!-- <p class="meta">ここにスクリーンショット画像を配置</p> -->
         </div>
         <div>
           <h3>新規メモ登録画面</h3>
@@ -135,4 +136,5 @@
     </footer>
   </div>
 </body>
+
 </html>
