--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="cols">
         <div>
           <h3>トップ画面（メモ一覧表示）</h3>
-          <p class="meta">wordcloudtest1.png</p>
+          <p class="meta"><img src="wordcloudtest1.png"></p>
           <!-- <p class="meta">ここにスクリーンショット画像を配置</p> -->
         </div>
         <div>
@@ -138,3 +138,4 @@
 </body>
 
 </html>
+
