--- a/index.html
+++ b/index.html
@@ -102,12 +102,11 @@
     </section>
 
     <section>
-      <h2>🖼 7. スクリーンショット・デモ（任意）</h2>
+      <h2>🖼 7. スクリーンショット・デモ</h2>
       <div class="cols">
         <div>
           <h3>トップ画面（メモ一覧表示）</h3>
-          <p class="meta"><img src="wordcloudtest1.png"></p>
-          <!-- <p class="meta">ここにスクリーンショット画像を配置</p> -->
+          <p class="meta"><img src="wordcloudtest1.png" width="649"> height="328"</p>
         </div>
         <div>
           <h3>新規メモ登録画面</h3>
@@ -138,4 +137,5 @@
 </body>
 
 </html>
+
 
