--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
     <section>
       <h2>🧩 1. 作品タイトル</h2>
       <p><strong>「SNS情報収集＆解析ツール」</strong></p>
-      <p>SNS（X）上の特定のキーワードを含む投稿をPythonにより収集・解析し、ワードクラウドやグラフで可視化するツールです。</p>
+      <p>SNS（X）上の特定のキーワードを含む投稿をPythonにより収集・解析し、ワードクラウドやグラフで可視化するツールです。SNSマーケティングや株式トレード等に活用できるツールを目指しました。</p>
       <p class="meta"><span class="badge">Python</span><span class="badge">SNSマーケティング</span><span class="badge">X</span><span class="badge">ワードクラウド</span><span class="badge">感情分析</span><span class="badge">個人開発</span></p>
     </section>
 
     <section>
       <h2>💡 2. 制作の目的（課題と解決策）</h2>
       <div class="quote">
-        <p>クリエイターの知人との会話の中で<strong>「SNS（X）上の反応をもっと客観的に把握できないか」</strong>と考えたことがきっかけでした。</p>
+        <p>クリエイターの知人と会った際に<strong>「SNS（X）上の反応をもっと客観的に把握できないか」</strong>と考えたことがきっかけでした。</p>
         <p>SNS上の反応は検索欄から簡単に調べることができるものの、コメントを一つひとつ見ていくだけでは特定の否定的なコメントに過剰に反応してしまったり、想像以上に<Strong>客観的に全体を捉えることが難しい</Strong>ようです。</p>
         <p>また、AI「Grok」では簡単な集計は可能ですが、解析した情報を正しく画像出力することが難しいと感じました（特に日本語）。</p>
-        <p>そこでキーワードを入力するだけで、誰でもSNS上の反応を収集・解析し、グラフやワードクラウドで可視化できるツールを作成したいと考えました。</p>
-        <p>当ツールはエゴサーチだけでなく競合の情報も調べることができるため、今後の戦略に幅広く活用できます。</p>
+        <p>そこでキーワードを入力するだけで、誰でもSNS上の反応を収集・解析し、可視化できるツールを作成しました。</p>
+        <p>当ツールはエゴサーチだけでなく競合他社の製品や、株式の銘柄に関する情報も調べることができます。</p>
         <p></p>
       </div>
     </section>
@@ -105,8 +105,8 @@
       <h2>🖼 7. スクリーンショット・デモ</h2>
       <div class="cols">
         <div>
-          <h3>トップ画面（メモ一覧表示）</h3>
-          <p class="meta"><img src="wordcloudtest1.png" width="649"> height="328"</p>
+          <h3>ワードクラウドの例</h3>
+          <p class="meta"><img src="wordcloudtest1.png" width="649" height="328">株式の銘柄名（例：キオクシア）から付随する情報を収集・解析した例です。決算発表翌日に収集しましたが「ストップ安」「売る」「厳しい」など市場心理が強く出ていることがわかります。（実際その日はストップ安でした）</p>
         </div>
         <div>
           <h3>新規メモ登録画面</h3>
@@ -137,5 +137,6 @@
 </body>
 
 </html>
+
 
 
