--- a/index.html
+++ b/index.html
@@ -81,18 +81,17 @@
 
     <section>
       <h2>🔍 4. 開発で工夫した点・問題解決力</h2>
-            <p>や文字崩壊が起こりがちであったことから、（特に日本語）開発中にファイル入出力処理や文字化けなどの問題に直面しましたが、原因を分解して調査し、Javaの例外処理と文字コード設定を見直すことで解決しました。</p>
-      <p>また、データ構造を見直す過程で、<strong>クラス設計（責務分離）</strong>の重要性を理解し、メモ管理・ファイル操作・AI提案などを独立したクラスとして整理するよう改善しました。</p>
-      <p>問題に直面するたびに「どうすれば再発を防げるか」を考え、設計段階から修正する姿勢を徹底しました。</p>
+      <p>外部のAPI連携には回数制限が設けられており、Xを利用する場合わずか数回のトライ＆エラーで上限に達してしまい開発が進まないという大きな問題が発生しました。そこで、APIで外部に情報を取りに行くプログラムと感情分析を行うプログラムを別にすることで一度抽出したリソースを再利用して開発を続けられるよう工夫しました。この挑戦を通じて、機能別に分離・分業することの重要性を痛感しました。</p>
+      <p>外部ライブラリ頼みな点が多いですが、個人開発の中でも実用性を担保できるものとなることを心がけました。</p>
+      <p>APIや外部ライブラリを利用することから、可能な限り多くのソースをもとに安全性に配慮しながら作成しました。</p>      
     </section>
 
     <section>
       <h2>🚀 5. 成長した点・学び</h2>
       <p>この開発を通じて、単なる文法理解ではなく、<strong>「自分の考えをプログラムで表現する力」</strong>が身につきました。</p>
-      <p>APIの利用や形態素解析等で多くの外部ライブラリを利用する必要があったことから、セキュリティ面の安全性について考える機会を得ることができました。</p>
-      <p>APIの利用制限が個人で使用するうえでは大きな課題となる</p>
-      <p>AIツールを活用しながらも、最終的な判断は自分で下すよう意識し、問題を自分ごととして捉える姿勢が養われました。</p>
-      <p>また、エラー解決を通じてロジックの流れを深く理解し、自分の成長を実感できた経験となりました。</p>
+      <p>問題に直面するたびに「何が原因なのか」「どうすればよいか」を考え、一つ一つ地道に積み上げていきました。</p>
+      <p>APIの利用や形態素解析等で多くの外部ライブラリを利用する必要があったことから、セキュリティ知識の重要性について痛感しました。</p>
+      <p>AIツールの活用を通じて、利便性とともに誤情報による危険性を身をもって知ることができました。</p>
     </section>
 
     <section>
@@ -106,7 +105,7 @@
       <div class="cols">
         <div>
           <h3>ワードクラウドの例</h3>
-          <p class="meta"><img src="wordcloudtest1.png" width="649" height="328">株式の銘柄名（例：キオクシア）から付随する情報を収集・解析した例です。決算発表翌日に収集しましたが「ストップ安」「売る」「厳しい」など市場心理が強く出ていることがわかります。（実際その日はストップ安でした）</p>
+          <p class="meta"><img src="wordcloudtest1.png" width="649" height="328">ある株式の銘柄名から関連する情報を収集・解析した例です。決算発表翌日に収集したところ「ストップ安」「売る」「厳しい」などネガティブな市場心理が強く出ていることがわかりました。実際その翌日ストップ安となりました。</p>
         </div>
         <div>
           <h3>新規メモ登録画面</h3>
@@ -137,6 +136,7 @@
 </body>
 
 </html>
+
 
 
 
