--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section>
       <h2>🧩 1. 作品タイトル</h2>
       <p><strong>「SNS情報収集＆解析ツール」</strong></p>
-      <p>SNS（X）上の特定のキーワードを含む投稿をPythonにより収集・解析し、ワードクラウドやグラフで可視化するツールです。SNSマーケティングや株式トレード等に活用できるツールを目指しました。</p>
+      <p>SNS（X）上の特定のキーワードを含む投稿をPythonにより収集・解析し、ワードクラウドやグラフで可視化するツールです。SNSマーケティングや株式トレード等で実際に活用できるツールを目指しました。</p>
       <p class="meta"><span class="badge">Python</span><span class="badge">SNSマーケティング</span><span class="badge">X</span><span class="badge">ワードクラウド</span><span class="badge">感情分析</span><span class="badge">個人開発</span></p>
     </section>
 
@@ -63,7 +63,8 @@
         <p>SNS上の反応は検索欄から簡単に調べることができるものの、コメントを一つひとつ見ていくだけでは特定の否定的なコメントに過剰に反応してしまったり、想像以上に<Strong>客観的に全体を捉えることが難しい</Strong>ようです。</p>
         <p>また、AI「Grok」では簡単な集計は可能ですが、解析した情報を正しく画像出力することが難しいと感じました（特に日本語）。</p>
         <p>そこでキーワードを入力するだけで、誰でもSNS上の反応を収集・解析し、可視化できるツールを作成しました。</p>
-        <p>当ツールはエゴサーチだけでなく競合他社の製品や、株式の銘柄に関する情報も調べることができます。</p>
+        <p></p>
+        <p>当ツールはエゴサーチだけでなく「競合他社の製品」や、「株式の銘柄の市場心理の分析」にも活用できます。</p>
         <p></p>
       </div>
     </section>
@@ -104,8 +105,9 @@
       <h2>🖼 7. スクリーンショット・デモ</h2>
       <div class="cols">
         <div>
-          <h3>ワードクラウドの例</h3>
-          <p class="meta"><img src="wordcloudtest1.png" width="649" height="328">ある株式の銘柄名から関連する情報を収集・解析した例です。決算発表翌日に収集したところ「ストップ安」「売る」「厳しい」などネガティブな市場心理が強く出ていることがわかりました。実際その翌日ストップ安となりました。</p>
+          <h3>実際の使用例</h3>
+          <p class="meta"><img src="wordcloudtest1.png" width="649" height="328"></p>
+          <p>ある株式の銘柄名から関連する情報を収集・解析した例です。決算発表翌日に収集したところ「ストップ安」「売る」「厳しい」などネガティブな市場心理が強く出ていることがわかりました。実際その翌日ストップ安となりました。</p>
         </div>
         <div>
           <h3>新規メモ登録画面</h3>
@@ -136,6 +138,7 @@
 </body>
 
 </html>
+
 
 
 
