--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div>
           <h3>実際の使用例</h3>
           <p class="meta"><img src="wordcloudtest1.png" width="649" height="328"></p>
-          <p>ある株式の銘柄名から関連する情報を収集・解析した例です。決算発表翌日に収集したところ「ストップ安」「売る」「厳しい」などネガティブな市場心理が強く出ていることがわかりました。実際その翌日ストップ安となりました。</p>
+          <p><h4>とある株式の銘柄名から関連する情報を収集・解析した例です。決算発表翌日に収集したところ「ストップ安」「売る」「厳しい」などネガティブな市場心理が強く出ていることがわかりました。実際その翌日ストップ安となりました。</h4></p>
         </div>
         <div>
           <h3>新規メモ登録画面</h3>
@@ -138,6 +138,7 @@
 </body>
 
 </html>
+
 
 
 
