--- a/index.html
+++ b/index.html
@@ -109,20 +109,20 @@
           <p class="meta"><img src="wordcloudtest1.png" width="649" height="328"></p>
           <p><h4>とある株式の銘柄名から関連する情報を収集・解析した例です。決算発表翌日に収集したところ「ストップ安」「売る」「厳しい」などネガティブな市場心理が強く出ていることがわかりました。実際その翌日ストップ安となりました。</h4></p>
         </div>
-        <div>
+<!--        <div>
           <h3>新規メモ登録画面</h3>
           <p class="meta">ここにスクリーンショット画像を配置</p>
-        </div>
+        </div>-->
       </div>
       <div class="cols" style="margin-top:12px">
         <div>
-          <h3>AI提案コメント機能</h3>
+          <h3>感情分析のグラフ</h3>
           <p class="meta">ここにスクリーンショット画像を配置</p>
         </div>
-        <div>
+<!--        <div>
           <h3>デモ動画リンク</h3>
           <p class="meta">URL を掲載（任意）</p>
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -138,6 +138,7 @@
 </body>
 
 </html>
+
 
 
 
