--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>Python作品ポートフォリオ説明書（問題解決力 × 成長意欲）</title>
+  <title>Python作品ポートフォリオ説明書（H.Kobayashi）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root{
@@ -45,8 +45,8 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Python作品ポートフォリオ説明書</h1>
-      <div class="subtitle">問題解決力 × 成長意欲 にフォーカスした解説</div>
+      <h1>Pythonポートフォリオ説明書</h1>
+      <div class="subtitle">H.Kobayashi</div>
     </header>
 
     <section>
@@ -138,6 +138,7 @@
 </body>
 
 </html>
+
 
 
 
